파일 한글깨짐 수정

--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -18,5 +18,5 @@
       <label for="password">Password</label>
     </div>
   </div>
-  <input class="signup-btn waves-effect waves-light btn" type="submit" value="°¡ÀÔÇÏ±â" />
+  <input class="signup-btn waves-effect waves-light btn" type="submit" value="ê°€ìž…í•˜ê¸°" />
 </form>
